# nms-simd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
benchmark/: CMakeLists.txt  benchmark.cpp
nms-simd/: CMakeLists.txt  nms-simd.cpp  nms-simd.h  nms-utils.cpp  nms-utils.h  palanteer.h  rectangles.h
python/: CMakeLists.txt  py-utils.cpp  py-utils.h  python.cpp
test/: CMakeLists.txt  native-test.h  py-test.cpp  py-test.h  test.cpp
